# Wildcard

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPER_GUIDE.md  README.md  RUNBOOK.md  SOURCES.md  USER_GUIDE.md  docker-compose.yaml  install_uv.sh  pyproject.toml  pyrightconfig.json  read_comments.py  requirements.txt  tox.ini  vercel-build.sh  vercel.json  wildcard.db
.github/workflows/: audit.yml  ci.yml
alembic/: env.py
alembic/versions/: 7611442310ec_rename_prompt_to_mission.py  f6093771bac3_initial_migration.py
api/: index.py
docs/: tooling_evaluation.md
plans/: session.md
prompts/: session.md
reports/: session.md
src/wms/: config.py  main.py
src/wms/database/: models.py  seed.py  seed_data.yaml  session.py
src/wms/routers/: dashboard.py  print_studio.py
src/wms/static/: output.css
src/wms/templates/: base.html  dashboard.html  pdf_layout.html  print_studio.html
src/wms/templates/partials/: batch_success.html  mission_row.html  mission_table.html  prompt_row.html  prompt_table.html
tests/: conftest.py
tests/wms/: test_dashboard.py  test_integration.py  test_main.py  test_pdf.py  test_print_studio.py  test_unit.py
