[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "playwright>=1.58.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "tox>=4.53.0",
    "uvicorn>=0.44.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.1",
    "mdformat>=1.0.0",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
[project.scripts]
wms = "wms.main:app"

[tool.ruff]
target-version = 'py312'
src = ['src', 'tests']
[tool.ruff.lint]
select = ['E', 'F', 'I', 'D']
ignore = ['D100', 'D104']
[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.pyright]
typeCheckingMode = 'strict'
include = ['src', 'tests']
